<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL" Id="{a4a1f3b6-3430-4b84-b16b-3f00b70af1b1}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	// COMMUNICATION variables
	ReceivedStringArray : ARRAY[0..200] OF STRING;
	ReceivedStringWordCounter : INT := 0;

	ReceivedCMD : STRING := '';
	VarValue : STRING := '';
	VarType : STRING := '';
	VarName : STRING := '';
	//
	
	robotData : RobotData;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>